--- a/PostBlog.Data/PostBlog.Data.csproj
+++ b/PostBlog.Data/PostBlog.Data.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    <ProjectReference Include="..\DataHelper\DataHelper.csproj" />
+    <ProjectReference Include="..\PostBlog.Core\PostBlog.Core.csproj" />
   </ItemGroup>
 
 </Project>
