--- a/PostBlog/PostBlog.csproj
+++ b/PostBlog/PostBlog.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\PostBlog.Application\PostBlog.Application.csproj" />
   </ItemGroup>
 
 </Project>
